--- a/frontend/web-app/index.html
+++ b/frontend/web-app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Менеджер соревнований по стрельбе из лука</title>
+    <title>ArcheryManager</title>
   </head>
   <body>
     <div id="root"></div>
